--- a/src/modulo-05-dotNet/Projects/StreetFigther.Web/StreetFigther.Web/Views/StreetFighter/FichaTecnica.cshtml
+++ b/src/modulo-05-dotNet/Projects/StreetFigther.Web/StreetFigther.Web/Views/StreetFighter/FichaTecnica.cshtml
@@ -1,63 +1,36 @@
 ﻿
+@model StreetFighter.Web.Models.FichaTecnicaModel
 @{
-    ViewBag.Title = "FichaTecnica";
+    ViewBag.Title = "Ficha Técnica";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    @model StreetFighter.Web.Models.FichaTecnicaModel
-
-
 }
 
 
-<body>
-    <div class="titulo">
-            <h1 id="ficha-tecnica">Ficha Técnica</h1>
-        </div>
 
-
-        <div class="corpo">
             <h1 id="ficha-tecnica">Blanka</h1>
 
-            <table>
-                <tr>
-                    <td>
-                       <img src="~/Content/Imagens/blanka.png" alt="Imagem-blanca" />
-                    </td>
-
-                    <td>
-                        <p>
-                            <strong>Primeira aparição:</strong> @Model.PrimeiraAparicao </br>
-                            <strong>Nascimento:</strong> 12 de fevereiro de 1966.</br>
-                            <strong>Altura:</strong> 192cm. <br>
-                            <strong>Peso:</strong> 96kg. <br>
-                            <strong>Medidas:</strong> B198, C120, Q172.  <br>
-                            <strong>Tipo sanguíneo:</strong> B. <br>
-                            <strong>Habilidades especiais:</strong> Caçar, Eletricidade. <br>
-                            <strong>Gosta:</strong> Frutas tropicais, Pirarucu, Sua mãe. <br>
-                            <strong>Desgosta:</strong> Army ants (espécie de formiga). <br>
-                            <strong>Estilo de luta:</strong> Luta Selvagem autodidata (Army Ants) / Capoeira. <br>
-                            <strong>Origem:</strong> Brasil (lugar de nascença é provável como sendo Tailândia). <br>
-                            <strong>Uma fala de vitória:</strong> "Ver você em ação é uma piada!" <br>
-                            <strong>SSF2 nickname:</strong> "A selvagem criança da natureza". <br>
-                            <strong>SFA3 nickname:</strong> "A animal pessoa amazônica". <br>
-                            <strong>SF4 nickname:</strong> "Guerreiro da selva". <br>
-                            <strong>SFA3 stage:</strong> Ramificação do Rio Madeira - pantano, Brasil (ramificação do rio Madeira: talvez possa
-                            ser Mato Grosso, ou Tocantins?). <br>
-                            <strong>SF2 stage:</strong> Bacia do rio Amazonas (Brasil). <br>
-                            <strong>Golpes especiais famosos:</strong> Electric Thunder, Rolling Attack.
-                        </p>
-                    </td>
-                </tr>
-
-            </table>
-
-
-
-
-
-        </div>
-
-    
-
-</body>
+           
+             <img src="~/Content/Imagens/blanka.png" alt="Imagem-blanca" />
+                             
+                    <p><strong>Primeira aparição:</strong> @Model.PrimeiraAparicao.</p>
+                    <p><strong>Nascimento:</strong> @Model.Nascimento.ToString("dd/MM/yyyy").</p>
+                    <p><strong>Altura:</strong> @Model.Altura cm.</p>
+                    <p><strong>Peso:</strong> @Model.Peso kg.</p>
+                    <p><strong>Medidas:</strong> @Model.Medidas.</p>
+                    <p><strong>Tipo sanguíneo:</strong> @Model.TipoSanguineo.</p>
+                    <p><strong>Habilidades especiais:</strong> @Model.HabilidadeEspeciais.</p>
+                    <p><strong>Gosta:</strong> @Model.Gosta.</p>
+                    <p><strong>Desgosta:</strong> @Model.Desgosta.</p>
+                    <p><strong>Estilo de luta:</strong> @Model.EstiloLuta.</p>
+                    <p><strong>Origem:</strong> @Model.Origem.</p>
+                    <p><strong>Uma fala de vitória:</strong> @Model.FalaDaVitoria.</p>
+                    <p><strong>SSF2 nickname:</strong> @Model.SSF2Nickname.</p>
+                    <p><strong>SFA3 nickname:</strong> @Model.SFA3Nickname.</p>
+                    <p><strong>SF4 nickname:</strong> @Model.SF4Nickname.</p>
+                    <p>
+                        <strong>SFA3 stage:</strong> @Model.SFA3Stage.
+                    </p>
+                    <p><strong>SF2 stage:</strong> @Model.SF2Stage.</p>
+                    <p><strong>Golpes especiais famosos:</strong> @Model.GolpesEspeciais.</p>
 
 
