feat(StreetFighter, FichaTecnica,Sobre) : implementar MVC para o site do StreetFighter

--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
@@ -5,43 +5,40 @@
 }
 
        <div class="corpo">
-            <h1 id="ficha-tecnica">Blanka</h1>
+    <h1 id="ficha-tecnica">Blanka</h1>
+    <table>
+        <tr>
+            <td>
+                <img src="~/Content/Images/blanka.png" alt="Imagem-Blanka" />
+            </td>
+            <td>
 
-            <table>
-                <tr>
-                    <td>
-                        <img src="imagens/blanka.png" alt="Imagem-blanca" />
-                    </td>
+                <p>
+                    <strong>Primeira aparição:</strong> @Model.PrimeiraAparicao </br>
+                    <strong>Nascimento:</strong> @Model.DataNascimento</br>
+                    <strong>Altura:</strong> @Model.Altura cm.
+                    <strong>Peso:</strong> @Model.Peso kg. </br>
+                    <strong>Medidas:</strong>@Model.Medidas  </br>
+                    <strong>Tipo sanguíneo:</strong> @Model.TipoSanguineo </br>
+                    <strong>Habilidades especiais:</strong>@Model.HabilidadesEspeciais </br>
+                    <strong>Gosta:</strong> @Model.Gosta </br>
+                    <strong>Desgosta:</strong> @Model.Desgosta </br>
+                    <strong>Estilo de luta:</strong> @Model.EstiloDeLuta </br>
+                    <strong>Origem:</strong> @Model.Origem </br>
+                    <strong>Uma fala de vitória:</strong>@Model.FalaDeVitoria </br>
+                    <strong>SSF2 nickname:</strong> @Model.SSF2Nickname </br>
+                    <strong>SFA3 nickname:</strong>@Model.SFA3Nickname </br>
+                    <strong>SF4 nickname:</strong> @Model.SF4Nickname </br>
+                    <strong>SFA3 stage:</strong> @Model.SFA3Stage</br>
+                    <strong>SF2 stage:</strong> @Model.SF2Stage </br>
+                    <strong>Golpes especiais famosos:</strong>@Model.GolpesEspeciaisFamosos</br>
 
-                    <td>
-                        <p> <strong>Primeira aparição:</strong> @Model.PrimeiraAparicao </p>
-                        <p> <strong>Nascimento:</strong> @Model.DataNascimento</p>
-                        <p> <strong>Altura:</strong> @Model.Altura cm. </p>
-                        <p> <strong>Peso:</strong> @Model.Peso kg. </p>
-                        <p> <strong>Medidas:</strong>@Model.Medidas  </p>
-                        <p> <strong>Tipo sanguíneo:</strong> @Model.TipoSanguineo </p>
-                        <p> <strong>Habilidades especiais:</strong>@Model.HabilidadesEspeciais </p>
-                        <p> <strong>Gosta:</strong> @Model.Gosta </p>
-                        <p> <strong>Desgosta:</strong> @Model.desgosta </p>
-                        <p> <strong>Estilo de luta:</strong> @Model.EstiloDeLuta </p>
-                        <p> <strong>Origem:</strong> @Model.Origem </p>
-                        <p> <strong>Uma fala de vitória:</strong>@Model.FalaDeVitoria </p>
-                        <p> <strong>SSF2 nickname:</strong> @Model.SSF2Nickname </p>
-                        <p> <strong>SFA3 nickname:</strong>@Model.SFA3Nickname </p>
-                        <p> <strong>SF4 nickname:</strong> @Model.SF4Nickname </p>
-                        <p> <strong>SFA3 stage:</strong> @Model.SFA3Stage</p>
-                        <p> <strong>SF2 stage:</strong> @Model.SF2Stage </p>
-                        <p> <strong>Golpes especiais famosos:</strong>@Model.GolpesEspeciaisFamosos</p>
-                        
-                    </td>
-                </tr>
+                </p>
+            </td>
+        </tr>
 
-            </table>
-
-
-
+    </table>
 
 
-        </div>
 
-    </div>
+
