--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Content/estilo.css
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Content/estilo.css
@@ -1,47 +1,48 @@
-body {
+body{
     background: url('/Content/Images/fundo.jpg') no-repeat center 0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-position:top;
+    background-repeat: no-repeat;
+    font-family: Helvetica, arial, sans-serif;
 }
 
-    .menu {
-        margin: 250px auto 0;
-        display: table;
-        padding: 15px;
-        border: 1px solid silver;
-        border-radius: 10px;
-        background: rgba(140, 140, 140, .6);
-    }
-    
-        .menu > .item {
-            margin: 25px;
+ .menu{
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    background-color:rgba(211, 211, 211, 0.5);
+    display: table;
+    padding: 15px;
+    margin: 250px auto 0px;
+  }
+
+       .menu > .item{
+        margin:25px;
         }
-            
-            .menu > .item > a {
-                color: #fff;
-                text-decoration: none;
-                font-weight: bold;
-            }
-            
-    .conteudo {
+
+              .menu >.item > a{
+                      color:#FFF;
+                      text-decoration: none;
+                      font-weight: bold;
+                    }
+.conteudo {
         margin: 70px auto;
         width: 800px;
         background: #eee;
     }
-    
-        .conteudo .titulo {
-            padding: 1px 20px;
-            font-size: 14px;
-            background: #5a5a5a;
-            color: #eee;
-        }
-        
-        .conteudo .corpo {
-            padding: 15px;
-            min-height: 300px;
-            overflow: auto; /* hack pro elemento considerar os floats */
-        }
+           .conteudo .titulo {
+               padding: 1px 20px;
+               font-size: 14px;
+               background: #5a5a5a;
+               color: #eee;
+           }
 
-        p > img {
-            float: left;
-            margin-right: 20px;
-        }
+           .conteudo .corpo {
+               padding: 15px;
+               min-height: 300px;
+               overflow: auto; 
+           }
+#imagem {
+   float:left;
+  width: 370px;
+  height: 350px;
+
+}
