--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             <a href="~/StreetFighter/Index">Inicio</a>
         </span>
         <span class="item">
-            <a href="<a href="~/StreetFighter/Cadastro"</a>">Cadastro</a>
+            <a href="~/StreetFighter/Cadastro">Cadastro</a>
         </span>
         <span class="item">
             <a href="~/StreetFighter/FichaTecnica">Ficha Técnica</a>
