--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/Cadastro.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/Cadastro.cshtml
@@ -1,7 +1,127 @@
-﻿
+﻿@model StreetFighter.Web.Models.CadastroModel
 @{
     ViewBag.Title = "Cadastro";
 }
 
-<h2>Cadastro</h2>
+<h2>Cadastro de Personagem</h2>
 
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Cadastro Personagem</title>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <style>
+        .field-validation-error {
+            color: #a94442;
+        }
+    </style>
+</head>
+<body>
+
+    <hr />
+
+    @*Se estiver vazia, não é preenchido*@
+    <h3>@ViewBag.Mensagem</h3>
+
+    @using (Html.BeginForm("Salvar", "StreetFigther", FormMethod.Post, new { @class = "form-horizontal" }))
+    {
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Imagem, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(model => model.Imagem, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Imagem)
+            </div>
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Nome, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(model => model.Nome, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Nome)
+            </div>
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.DataNascimento, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(model => model.DataNascimento, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DataNascimento)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Altura, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(model => model.Altura, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Altura)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Peso, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(model => model.Peso, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Peso)
+            </div>
+        </div>
+
+        //Origem DropdownListFor
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Origem, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.DropDownListFor(model => model.Origem, (IEnumerable<SelectListItem>)ViewBag.Origem, "Selecione...", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Origem)
+            </div>
+        </div>
+        
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.GolpesEspeciais, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(model => model.GolpesEspeciais, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.GolpesEspeciais)
+            </div>
+        </div>
+
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Oculto, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
+                @Html.CheckBoxFor(model => model.Oculto)
+                @Html.ValidationMessageFor(model => model.Oculto)
+            </div>
+        </div>
+
+        
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Salvar</button>
+            </div>
+        </div>
+    }
+
+    <script src="~/Scripts/jquery-1.9.1.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+
+    <script type="text/javascript">
+        $.validator.methods.number = function (value, element) {
+            var regex = /^(\d*)(\,\d{1,2})?$/; //99999,99
+            return this.optional(element) || regex.test(value);
+        }
+
+        $.validator.methods.date = function (value, element) {
+            var date = new Date(value.replace(/(\d{2})[/](\d{2})[/](\d{4})/, "$2/$1/$3")); //31/12/2016
+            return this.optional(element) || !/Invalid|NaN/.test(date.toString());
+        }
+    </script>
+</body>
+</html>
