feat(StreetFigther): Exemplos camadas em aula.

--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
@@ -15,9 +15,7 @@
 
                 <h2>@(Model.Nome)</h2>
 
-                <img id="personagem" src="@Model.Imagem" alt="auto">
-
-                <p><strong>Data de Nascimento:</strong> @(String.Format("{0} de {1} de {2}.", Model.DataNascimento.Day, Model.DataNascimento.ToString("MMMM", new CultureInfo("pt-BR")), Model.DataNascimento.Year))</p>
+                <p><strong>Data de Nascimento:</strong> @(Model.DataNascimento.ToShortDateString())</p>
                 <p><strong>Altura:</strong> @(Model.Altura) cm.</p>
                 <p><strong>Peso:</strong> @(Model.Peso) kg.</p>
                 <p><strong>Origem:</strong> @(Model.Origem).</p>
