refactory(StreetFighterController, FichaTecnica, Cadastro, Detalhe) : alterar Action Salvar, alterar layout de Cadastro, deletar view Detalhe e FichaTecnicaModel

--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -6,11 +6,16 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
+   
     <title>Street Fighter - Inicio</title>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/estilo.css" rel="stylesheet" />
 </head>
 
 <body>
+
+
+
     <div class="menu">
         <span class="item">
             <a href="~/StreetFighter/Index">Inicio</a>
