--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/StreetFighter/FichaTecnica.cshtml
@@ -1,12 +1,11 @@
-﻿@model  StreetFighter.Web.Models.CadastroModel
+﻿@model  StreetFighter.Web.Models.FichaTecnicaModel
 @{
-    ViewBag.Title = "FichaTecnica";
+    ViewBag.Title = "Ficha Tecnica";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
        <div class="corpo">
-    <!----<h1 id="ficha-tecnica"></h1>-->
-    <table>
+     <table>
         <tr>
             <td>
                 <img src="@Model.Imagem" alt="Imagem-Personagem-Cadastrado">
@@ -21,48 +20,11 @@
                 <p><strong>Origem:</strong> @(Model.Origem).</p>
                 <p><strong>Golpes Especiais Famosos:</strong> @(Model.GolpesEspeciais).</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-                @*
-
-
-                <p>
-                    <strong>Primeira aparição:</strong> @Model.PrimeiraAparicao </br>
-                    <strong>Nascimento:</strong> @Model.DataNascimento</br>
-                    <strong>Altura:</strong> @Model.Altura cm.
-                    <strong>Peso:</strong> @Model.Peso kg. </br>
-                    <strong>Medidas:</strong>@Model.Medidas  </br>
-                    <strong>Tipo sanguíneo:</strong> @Model.TipoSanguineo </br>
-                    <strong>Habilidades especiais:</strong>@Model.HabilidadesEspeciais </br>
-                    <strong>Gosta:</strong> @Model.Gosta </br>
-                    <strong>Desgosta:</strong> @Model.Desgosta </br>
-                    <strong>Estilo de luta:</strong> @Model.EstiloDeLuta </br>
-                    <strong>Origem:</strong> @Model.Origem </br>
-                    <strong>Uma fala de vitória:</strong>@Model.FalaDeVitoria </br>
-                    <strong>SSF2 nickname:</strong> @Model.SSF2Nickname </br>
-                    <strong>SFA3 nickname:</strong>@Model.SFA3Nickname </br>
-                    <strong>SF4 nickname:</strong> @Model.SF4Nickname </br>
-                    <strong>SFA3 stage:</strong> @Model.SFA3Stage</br>
-                    <strong>SF2 stage:</strong> @Model.SF2Stage </br>
-                    <strong>Golpes especiais famosos:</strong>@Model.GolpesEspeciaisFamosos</br>
-
-                </p>
-                *@
             </td>
         </tr>
 
     </table>
 
-
+</div>
 
 
