refactory(_Layout): trocar link ddo menu de Ficha Tecncica para Lista de Personagens.

--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <a href="~/StreetFighter/Cadastro">Cadastro</a>
         </span>
         <span class="item">
-            <a href="~/StreetFighter/FichaTecnica">Ficha Técnica</a>
+            <a href="~/StreetFighter/Listagem">Lista de Personagens</a>
         </span>
         <span class="item">
             <a href="~/StreetFighter/Sobre">Sobre</a>
