refactory(NewStreetFighter): começando do zero, para resolver problemas com camadas.

--- a/src/modulo-05-dotNet/StreetFighter/StreetFighter.Web/Views/StreetFighter/Listagem.cshtml
+++ b/src/modulo-05-dotNet/StreetFighter/StreetFighter.Web/Views/StreetFighter/Listagem.cshtml
@@ -21,9 +21,9 @@
         alguma linha o sistema deve redirecionar para a
         tela de "Ficha Tecnica" carregando os dados detalhados
             desse personagem.
-   
-    
-    
+
+
+
      @model List<StreetFighter.Dominio.Personagem>
 
 *@
@@ -32,20 +32,24 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-        Hello</div> <!-- Esta coluna terá um tamanho de 8/12 -->
+            Hello
+        </div> <!-- Esta coluna terá um tamanho de 8/12 -->
         <div class="col-md-4">
-        World</div> <!-- Esta coluna terá um tamanho de 4/12 -->
+            World
+        </div> <!-- Esta coluna terá um tamanho de 4/12 -->
     </div>
 </div>
 
 
 <h3>
-    OLÁ GEEENTS!   
+    OLÁ GEEENTS!
 </h3>
 
 
-@foreach (var personagem in Model)
-{
-    personagem.Nome;
-}
 
+@*
+    @foreach (var personagem in Model)
+    {
+        personagem.Nome;
+    }
+*@
