--- a/src/modulo-07-reforco-dot-net/LojaDeItens/LojaDeItens.Web/Views/ItemMagico/Editar.cshtml
+++ b/src/modulo-07-reforco-dot-net/LojaDeItens/LojaDeItens.Web/Views/ItemMagico/Editar.cshtml
@@ -6,19 +6,53 @@
 
 <h2>@titulo</h2>
 
-<div>
-    @using (Ajax.BeginForm("Salvar", "ItemMagico", new AjaxOptions
-    {
-        HttpMethod = "Post",
-        OnSuccess = "itemMagicoEditar.sucessoNoCadastro"
-    }))
-    {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary()
+<form>
 
-        @Html.LabelFor(m => m.Nome)
-        @Html.TextBoxFor(m => m.Nome)
 
-        <button type="submit">Salvar</button>
-    }
-</div>
+        @using (Ajax.BeginForm("Salvar", "ItemMagico", new AjaxOptions
+        {
+            HttpMethod = "Post",
+            OnSuccess = "itemMagicoEditar.sucessoNoCadastro",
+            OnFailure = "itemMagicoEditar.falhaNoCadastro"
+
+
+        }))
+        {
+            <div class="form-group">
+
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary()
+
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Nome)
+                @Html.TextBoxFor(m => m.Nome)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Descricao)
+                @Html.TextBoxFor(m => m.Descricao)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Preco)
+                @Html.TextBoxFor(m => m.Preco)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Estoque)
+                @Html.TextBoxFor(m => m.Estoque)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Raro)
+                @Html.CheckBoxFor(m => m.Raro)
+            </div>
+
+            <button type="submit"> Salvar </button>
+            }
+
+
+</form>
+
